vendored_parsers/tree-sitter-surface/test/corpus/blocks.txt
================================================================================
If Block
================================================================================

{#if value}
{/if}

--------------------------------------------------------------------------------

(fragment
  (block
    (start_block
      (block_name)
      (expression_value))
    (end_block
      (block_name))))

================================================================================
If-Else Block
================================================================================

{#if value}
{#else}
{/if}

--------------------------------------------------------------------------------

(fragment
  (block
    (start_block
      (block_name)
      (expression_value))
    (subblock
      (subblock_name))
    (end_block
      (block_name))))

================================================================================
Unless Block
================================================================================

{#unless value}
{/unless}

--------------------------------------------------------------------------------

(fragment
  (block
    (start_block
      (block_name)
      (expression_value))
    (end_block
      (block_name))))

================================================================================
For Block
================================================================================

{#for value <- @values}
{/for}

--------------------------------------------------------------------------------

(fragment
  (block
    (start_block
      (block_name)
      (expression_value))
    (end_block
      (block_name))))

================================================================================
For-Else Block
================================================================================

{#for value <- @values}
{#else}
{/for}

--------------------------------------------------------------------------------

(fragment
  (block
    (start_block
      (block_name)
      (expression_value))
    (subblock
      (subblock_name))
    (end_block
      (block_name))))

================================================================================
Case Block
================================================================================

{#case value}
{#match [value]}
{#match [value | _]}
{/case}

--------------------------------------------------------------------------------

(fragment
  (block
    (start_block
      (block_name)
      (expression_value))
    (subblock
      (subblock_name)
      (expression_value))
    (subblock
      (subblock_name)
      (expression_value))
    (end_block
      (block_name))))
