vendored_parsers/tree-sitter-surface/test/corpus/expressions.txt
================================================================================
Simple Expression
================================================================================

{@hello}

--------------------------------------------------------------------------------

(fragment
  (expression
    (expression_value)))

================================================================================
Shorthand Expression
================================================================================

{=@hello}

--------------------------------------------------------------------------------

(fragment
  (expression
    (expression_value)))

================================================================================
Dynamic Expression
================================================================================

{...@hello}

--------------------------------------------------------------------------------

(fragment
  (expression
    (expression_value)))

================================================================================
Quote Expression
================================================================================

{^@hello}

--------------------------------------------------------------------------------

(fragment
  (expression
    (expression_value)))

================================================================================
Single Empty Tuple
================================================================================

{{}}

--------------------------------------------------------------------------------

(fragment
  (expression
    (expression_value)))

================================================================================
Nested Empty Tuples
================================================================================

{{{{{}}}}}

--------------------------------------------------------------------------------

(fragment
  (expression
    (expression_value)))
