vendored_parsers/tree-sitter-surface/test/corpus/tags.txt
================================================================================
HTML Tag
================================================================================

<div>
</div>

--------------------------------------------------------------------------------

(fragment
  (tag
    (start_tag
      (tag_name))
    (end_tag
      (tag_name))))

================================================================================
HTML Self-Closing Tag
================================================================================

<div/>

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name))))

================================================================================
HTML Nested Tags
================================================================================

<div>
  <div>
    <div />
  </div>
</div>

--------------------------------------------------------------------------------

(fragment
  (tag
    (start_tag
      (tag_name))
    (tag
      (start_tag
        (tag_name))
      (tag
        (self_closing_tag
          (tag_name)))
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))
